--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="body">
   <main class="main">
     <section class="section">
-      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-main--EN/"><span class="section__button--size">&lArr;</span></a></button>
+      <button class="section__button"><a class="section__button--link" href="https://mr-front-end-dev.github.io/Bible-Verses-main--EN/"><span class="section__button--size">&#8656;</span></a></button>
     </section>
     <section class="section">
       <a class="section__h1--link" href="https://mr-front-end-dev.github.io/Bible-Verses-sub-sub--main--old--EN/"> 
